--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "muibox": "^2.0.0",
-    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
     "react-vertical-timeline-component": "^3.3.3",
     "reactstrap": "^8.10.0",
+    "sass-loader": "^11.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.7"
   }
 }
